--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Sw1iFdZBav3WyDJw6HOcxf+midStA3PBcKbB/h4CQIc=
+APP_KEY=base64:lV6Eo3GLhrpsOl5f1Qm7D1AWjfCVhLshjB1+fQZY/Pc=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE='Asia/Dhaka'
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=zayaanit_mm
-DB_USERNAME=zayaanit_mm
-DB_PASSWORD=zubayer%123
+DB_DATABASE=money_manager
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
