--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
-MAIL_USERNAME=null
+MAIL_USERNAME=contact@zubayerahamed.com
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
