--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=MoneyManager
 APP_ENV=local
 APP_KEY=base64:Qe6foV4cfhtg9hEadEmADNq2VO0clvQifpCnlpeoPoA=
 APP_DEBUG=true
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=zayaanit_mm
+DB_DATABASE=zubayer_mm
 DB_USERNAME=root
 DB_PASSWORD=
 
