--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=MoneyManager
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:Qe6foV4cfhtg9hEadEmADNq2VO0clvQifpCnlpeoPoA=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=zubayer_mm
+DB_DATABASE=zubayera_mm
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -30,12 +30,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
+MAIL_HOST=ns1.mhhostbd.com
+MAIL_PORT=465
 MAIL_USERNAME=contact@zubayerahamed.com
-MAIL_PASSWORD=null
+MAIL_PASSWORD=zO?oS51Ng-{?
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="support@moneymanager.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
