--- a/.env
+++ b/.env
@@ -29,13 +29,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=ns1.mhhostbd.com
-MAIL_PORT=465
-MAIL_USERNAME=contact@zubayerahamed.com
-MAIL_PASSWORD=zO?oS51Ng-{?
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="support@moneymanager.com"
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
